--- a/mobile_robot/CMakeLists.txt
+++ b/mobile_robot/CMakeLists.txt
@@ -33,7 +33,7 @@ if(BUILD_TESTING)
 endif()
 
 install(
-  DIRECTORY launch descriptions
+  DIRECTORY launch descriptions config
   DESTINATION share/${PROJECT_NAME}
 )
 
